fix (LanguageSwitcher): dropdown color on Firefox

--- a/src/components/languageSwitch/languageSwitch.module.css
+++ b/src/components/languageSwitch/languageSwitch.module.css
@@ -2,3 +2,7 @@
   background-color: transparent;
   @apply mx-4 cursor-pointer;
 }
+
+.option {
+  background-color: var(--bg);
+}
